test/fail/io/read_from_write_file.lly
#[
IOError: File not open for reading.
Traceback:
    File "[builtin]", from file::readline
    File "read_from_write_file.lly", from __main__ at line 9
]#

var f = file::open("io_test_file.txt", "w")
f.readline()
